--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "dasoe_report",
+  "name": "covid-reports-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "API per dati epidemiologici e vaccinali Regione Sicilia",
   "main": "api.js",
   "scripts": {
-    "start": "node api.js"
+    "start": "node index.js"
   },
-  "author": "",
+  "author": "@opendatasicilia",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "csvtojson": "^2.0.10",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6"
   }
 }
